feat: switch icons to phosphor and use astro-icon instead

--- a/apps/docs/src/components/PrevNext.astro
+++ b/apps/docs/src/components/PrevNext.astro
@@ -1,7 +1,5 @@
 ---
-import { Icon } from "@iconify/react";
-import roundDoubleAltArrowRightLinear from "@iconify/icons-solar/round-double-alt-arrow-right-linear";
-import roundDoubleAltArrowLeftLinear from "@iconify/icons-solar/round-double-alt-arrow-left-linear";
+import { Icon } from "astro-icon";
 
 const { collectionPages, currentPageSlug, collection } = Astro.props;
 
@@ -21,7 +19,7 @@ const nextPage = collectionPages[currentPageIndex + 1];
           class="flex p-4 no-underline items-center justify-start border border-slate-300 rounded-xl shadow"
           href={`/${collection}/${previousPage.slug}`}
         >
-          <Icon icon={roundDoubleAltArrowLeftLinear} width={48} className="block w-[48px] min-w-[48px]" />
+          <Icon name="phosphor/duotone/arrow-circle-left-duotone" width={48} className="block w-[48px] min-w-[48px]" />
           <div class="pl-2 truncate">
             <div class="text-base">Previous <span class="sr-only">Post</span></div>
             <div class="text-2xl font-bold truncate">
@@ -45,7 +43,7 @@ const nextPage = collectionPages[currentPageIndex + 1];
               {nextPage.data.title}
             </div>
           </div>
-          <Icon icon={roundDoubleAltArrowRightLinear} width={48} className="w-[48px]  min-w-[48px]" />
+          <Icon name="phosphor/duotone/arrow-circle-right-duotone" width={48} className="w-[48px]  min-w-[48px]" />
         </a>
       )
     }
