--- a/apps/docs/src/components/docs/DocHeading.astro
+++ b/apps/docs/src/components/docs/DocHeading.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "@iconify/react";
-import linkBold from "@iconify/icons-solar/link-bold";
+import linkDuotone from "@iconify/icons-ph/link-duotone";
 
 const { level, id } = Astro.props;
 
@@ -11,7 +11,7 @@ const Element: any = `h${level}`;
   <a href={`#${id}`} class="no-underline">
     <Element class="relative group !m-0" data-slug={id}>
       <div class="absolute right-full top-1 mr-2 group-hover:block hidden">
-        <Icon icon={linkBold} />
+        <Icon icon={linkDuotone} />
       </div>
       <slot />
     </Element>
