--- a/apps/docs/src/components/home/how-it-works.astro
+++ b/apps/docs/src/components/home/how-it-works.astro
@@ -1,10 +1,5 @@
 ---
-
-import { Icon } from "@iconify/react";
-import settingsLinear from "@iconify/icons-solar/settings-linear";
-import importOutline from "@iconify/icons-solar/import-outline";
-import boxLinear from "@iconify/icons-solar/box-linear";
-import moneyBagOutline from "@iconify/icons-solar/money-bag-outline";
+import { Icon } from "astro-icon";
 
 interface StepContent {
   title: string;
@@ -16,27 +11,27 @@ const steps: StepContent[] = [
   {
     title: "Configure your settings",
     description: "Using the app create your environments and features.",
-    image: settingsLinear,
+    image: "phosphor/duotone/gear-duotone", // settingsLinear,
   },
 
   {
     title: "Import a client",
     description: "Choose the client library that applies to your backend.",
-    image: importOutline,
+    image: "phosphor/duotone/download-duotone" // importOutline,
   },
 
   {
     title: "Wrap your feature",
     description:
       "Using the client library in your frontend and/or backend, write if statements that decide what to do.",
-    image: boxLinear,
+    image: "phosphor/duotone/gift-duotone" // boxLinear,
   },
 
   {
     title: "Profit!",
     description:
       "You now have a feature flag. Wire it up to analytics and you basically have A/B testing.",
-    image: moneyBagOutline,
+    image: "phosphor/duotone/currency-circle-dollar-duotone", // moneyBagOutline,
   },
 ];
 ---
@@ -54,8 +49,8 @@ const steps: StepContent[] = [
           {index + 1}
         </div>
         <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
-          <div class="flex-shrink-0 w-24 h-24 bg-slate-100 text-primary-500 rounded-full inline-flex items-center justify-center">
-            <Icon className="w-12 h-12" icon={settingsLinear} />
+          <div class="flex-shrink-0 w-24 h-24 bg-slate-100 text-primary-500 rounded-full inline-flex items-center justify-center p-4">
+            <Icon name={step.image} />
           </div>
           <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
             <h2 class="font-medium title-font text-emphasis mb-1 text-xl">
