--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -13,9 +13,11 @@ import '@fontsource/atkinson-hyperlegible/400.css';
 import '@fontsource/atkinson-hyperlegible/700.css';
 import "@/styles/globals.css";
 
-import { Icon } from '@iconify/react';
-import hamburgerMenuOutline from '@iconify/icons-solar/hamburger-menu-outline';
-import closeSquareOutline from '@iconify/icons-solar/close-square-outline';
+import { Icon } from "astro-icon";
+
+// import { Icon } from '@iconify/react';
+// import hamburgerMenuOutline from '@iconify/icons-solar/hamburger-menu-outline';
+// import closeSquareOutline from '@iconify/icons-solar/close-square-outline';
 import type { Heading } from "@/types/docs";
 
 interface Props {
@@ -124,6 +126,7 @@ guidePages.sort((a, b) => {
     <script defer data-domain="vexilla.dev" src="https://plausible.io/js/script.js"></script>
   </head>
   <body class="flex flex-col min-h-screen relative">
+
     <input type="checkbox" id="mobile-menu-toggle" class="sr-only" />
     <div class="mobile-menu w-screen h-screen fixed right-full bg-white dark:bg-black z-20 flex flex-col justify-between">
       <ResponsiveContainer class="flex flex-col items-center relative">
@@ -140,7 +143,7 @@ guidePages.sort((a, b) => {
           <label for="mobile-menu-toggle">
             <Icon
               width={32}
-              icon={closeSquareOutline}
+              name="phosphor/duotone/x-circle-duotone"
             />
           </label>
         </div>
@@ -148,7 +151,7 @@ guidePages.sort((a, b) => {
 
 
       <ResponsiveContainer class="px-6 py-2 text-center text-xl pt-20 h-screen overflow-scroll">
-        <Search client:only />
+        <Search client:only="react" />
         <ul class="flex flex-col py-8 gap-8">
           <li>
             <a
@@ -198,7 +201,7 @@ guidePages.sort((a, b) => {
         </ul>
       </ResponsiveContainer>
       <ResponsiveContainer class="flex flex-col items-center p-4">
-          <ThemeSelector client:only />
+          <ThemeSelector client:only="react" />
       </ResponsiveContainer>
     </div>
     <header class="fixed w-full top-0 bg-white dark:bg-black z-10">
@@ -243,8 +246,8 @@ guidePages.sort((a, b) => {
           </div>
         </div>
         <div class="hidden md:flex items-center gap-8">
-          <Search client:only />
-          <ThemeSelector client:only />
+          <Search client:only="react" />
+          <ThemeSelector client:only="react" />
         </div>
         <div class="md:hidden">
           <label
@@ -252,7 +255,7 @@ guidePages.sort((a, b) => {
           >
             <Icon
               width={32}
-              icon={hamburgerMenuOutline}
+              name="phosphor/bold/list-bold"
             />
           </label>
         </div>
