--- a/apps/docs/src/pages/about.astro
+++ b/apps/docs/src/pages/about.astro
@@ -1,9 +1,16 @@
-<div class="prose lg:prose-xl">
+---
+import Layout from "@/layouts/Layout.astro"
 
-  <h1>About Vexilla</h1>
+---
 
-  <p>Vexilla is a fully open source statically hosted feature flag tool. It was born out of necessity with the goal of lowering the cost to bootstrapped and hobby projects. That doesn't mean it isn't capable of handling larger projects. If you are using or plan on using it at your organization, we would love to hear about it.</p>
+<Layout title="About | Vexilla">
+  <div class="prose lg:prose-xl">
 
-  <p>The entire project has been live-streamed as a "Build in public in public" project.</p>
+    <h1>About Vexilla</h1>
 
-</div>
+    <p>Vexilla is a fully open source statically hosted feature flag tool. It was born out of necessity with the goal of lowering the cost to bootstrapped and hobby projects. That doesn't mean it isn't capable of handling larger projects. If you are using or plan on using it at your organization, we would love to hear about it.</p>
+
+    <p>The entire project has been live-streamed as a "Build in public in public" project.</p>
+
+  </div>
+</Layout>
