--- a/apps/docs/src/pages/documentation/index.astro
+++ b/apps/docs/src/pages/documentation/index.astro
@@ -3,17 +3,18 @@ import Layout from "@/layouts/Layout.astro";
 import Documentation from "@/layouts/Documentation.astro";
 import { Card, CardHeader, CardTitle, CardContent } from "@/components/ui/card";
 
+import Icon from "astro-icon";
 
-import { Icon } from "@iconify/react";
-import roundDoubleAltArrowRightLinear from "@iconify/icons-solar/round-double-alt-arrow-right-linear";
-import documentAddBold from '@iconify/icons-solar/document-add-bold';
-import rocket2Bold from '@iconify/icons-solar/rocket-2-bold';
-import windowFrameBold from '@iconify/icons-solar/window-frame-bold';
-import book2Bold from '@iconify/icons-solar/book-2-bold';
+// import { Icon } from "@iconify/react";
+// import roundDoubleAltArrowRightLinear from "@iconify/icons-solar/round-double-alt-arrow-right-linear";
+// import documentAddBold from '@iconify/icons-solar/document-add-bold';
+// import rocket2Bold from '@iconify/icons-solar/rocket-2-bold';
+// import windowFrameBold from '@iconify/icons-solar/window-frame-bold';
+// import book2Bold from '@iconify/icons-solar/book-2-bold';
 
 import { buttonVariants } from "@/components/ui/button";
 interface HelpSection {
-  icon: typeof roundDoubleAltArrowRightLinear;
+  icon: string;
   title: string;
   description: string;
   link: string;
@@ -27,7 +28,7 @@ const sections: HelpSection[] = [
       "We have put in a lot of effort to make sure that you can get up and running as quickly as possible.",
     link: "/documentation/getting-started",
     linkText: "Get Started",
-    icon: rocket2Bold
+    icon: "phosphor/duotone/rocket-launch-duotone"
   },
 
   {
@@ -36,7 +37,7 @@ const sections: HelpSection[] = [
       "There are a couple fundamental concepts to understand about Vexilla",
     link: "/documentation/core-concepts",
     linkText: "Learn More",
-    icon: book2Bold
+    icon: "phosphor/duotone/book-duotone"
   },
 
   {
@@ -45,7 +46,7 @@ const sections: HelpSection[] = [
       "The Application is where you will configure your flags and push them up to your VCS provider.",
     link: "/documentation/application",
     linkText: "Start Cooking",
-    icon: windowFrameBold
+    icon: "phosphor/duotone/app-window-duotone"
   },
 
   {
@@ -54,7 +55,7 @@ const sections: HelpSection[] = [
       "There is always more work to do. We would love it if you wanted to help improve the docs, translations, or Client SDK support.",
     link: "/documentation/contributing",
     linkText: "Join the Party",
-    icon: documentAddBold
+    icon: "phosphor/duotone/note-pencil-duotone"
   },
 ];
 ---
@@ -69,7 +70,7 @@ const sections: HelpSection[] = [
             <Card className="h-full flex flex-col">
               <CardHeader>
                 <CardTitle className="!m-0 flex flex-row items-center">
-                  <Icon icon={section.icon} />
+                  <Icon name={section.icon} width={32} />
                   <a href={section.link} class="no-underline ml-2">
                     {section.title}
                   </a>
@@ -78,8 +79,6 @@ const sections: HelpSection[] = [
               <CardContent className="flex flex-col h-full">
                 <p class="flex flex-1">{section.description}</p>
                 <div class="flex flex-row justify-end mt-auto">
-
-                      <Icon client:only icon={roundDoubleAltArrowRightLinear} width={48} className="w-[48px]  min-w-[48px]" />
                   <a
                     class={`flex flex-row items-center no-underline ${buttonVariants(
                       {
@@ -92,7 +91,7 @@ const sections: HelpSection[] = [
                     {section.linkText}
 
                     <div class="ml-2">
-                      <Icon icon={roundDoubleAltArrowRightLinear} width={24} />
+                      <Icon name="phosphor/duotone/arrow-circle-right-duotone" width={24} />
                     </div>
                   </a>
                 </div>
