--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -8,7 +8,7 @@ import { HomeDocumentation } from "../components/home/documentation";
 ---
 
 <Layout title="Vexilla">
-  <main class="z-1">
+  <main id="main" class="z-1">
     <HomeHero />
     <HomeFeatureFlags />
     <HomeHowItWorks />
