fix: fix focus after closing the cmdk dialog

--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -245,7 +245,7 @@ guidePages.sort((a, b) => {
           </nav>
         </div>
         <div class="hidden md:flex items-center gap-8">
-          <Search client:only="react" />
+          <Search client:only />
           <ThemeSelector client:only="react" />
         </div>
         <div class="md:hidden">
