--- a/apps/docs/src/layouts/Guides.astro
+++ b/apps/docs/src/layouts/Guides.astro
@@ -46,6 +46,7 @@ documentationPages.sort((a, b) => {
   documentationPages={documentationPages}
   currentPost={currentPost}
   currentPageSlug={currentPageSlug}
+  pathPrefix="guides"
 >
   <slot />
 </CommonDocumentationLayout>
