--- a/apps/docs/src/pages/guides/index.astro
+++ b/apps/docs/src/pages/guides/index.astro
@@ -39,12 +39,15 @@ const sections: GuideSection[] = [
           <div class="w-full md:w-1/2 p-2">
             <Card className="h-full flex flex-col">
               <CardHeader>
-                <CardTitle className="!m-0 flex flex-row items-center">
-                  <Icon name={section.icon} width={32} />
+                <CardTitle className="!m-0 flex flex-row items-start">
+                  <div class="bg-primary-500 rounded-full p-2 mt-[0.1rem]">
+                    <Icon name={section.icon} width={24} color="white" />
+                  </div>
                   <a href={section.link} class="no-underline ml-2">
                     {section.title}
                   </a>
                 </CardTitle>
+                <hr class="!mt-7" />
               </CardHeader>
               <CardContent className="flex flex-col h-full">
                 <p class="flex flex-1">{section.description}</p>
@@ -60,8 +63,8 @@ const sections: GuideSection[] = [
                   >
                     {section.linkText}
 
-                    <div class="ml-2">
-                      <Icon name="phosphor/duotone/arrow-circle-right-duotone" width={24} />
+                    <div class="ml-2 bg-primary-500 rounded-full">
+                      <Icon name="phosphor/duotone/arrow-circle-right-duotone" width={24} color="white" />
                     </div>
                   </a>
                 </div>
