fix: get icons working on home page of docs site

--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import { HomeHero } from "../components/home/hero";
 import { HomeFeatureFlags } from "../components/home/what-are-feature-flags";
 import HomeHowItWorks from "../components/home/how-it-works.astro";
-import { HomeFeatures } from "../components/home/features";
+import HomeFeatures from "../components/home/features.astro";
 import { HomeDocumentation } from "../components/home/documentation";
 ---
 
