fix: update marketing site home page ordering

--- a/apps/docs/src/components/home/features.astro
+++ b/apps/docs/src/components/home/features.astro
@@ -1,12 +1,24 @@
 ---
 import { Icon } from "astro-icon";
 
+import SectionHr from "./common/section-hr.astro";
+import SectionTitle from "./common/section-title.astro";
+
 interface FeatureContent {
   title: string;
   description: string;
   image: string;
 }
 const features: FeatureContent[] = [
+
+{
+    title: "Statically Hosted",
+    description: `The feature flag configuration is statically hosted which saves you money, effort, and time. Minimum effort scalability.`,
+    // image: "phosphor/duotone/computer-tower-duotone",
+    // image: "phosphor/duotone/file-cloud-duotone",
+    image: "phosphor/duotone/cloud-duotone",
+  },
+
   {
     title: "Open Source",
     description: `Consume, contribute, or fork it. Vexilla is something you can take with you and improve or adapt to whatever situation you need.`,
@@ -15,15 +27,7 @@ const features: FeatureContent[] = [
   },
 
   {
-    title: "Static Hosting",
-    description: `The feature flag configuration is statically hosted which saves you money and effort. It just scales.`,
-    // image: "phosphor/duotone/computer-tower-duotone",
-    // image: "phosphor/duotone/file-cloud-duotone",
-    image: "phosphor/duotone/cloud-duotone",
-  },
-
-  {
-    title: "Simple",
+    title: "Simplicity",
     description: `Many of the existing solutions require you to buy into and understand complicated documentation. Other Open source tools require you to stand up servers.`,
     image: "phosphor/duotone/flag-checkered-duotone",
   }
@@ -33,19 +37,17 @@ const features: FeatureContent[] = [
 
 <section class="text-normal body-font" id="features">
   <div class="container px-5 py-24 mx-auto">
-    <div class="text-center mb-20">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font text-emphasis mb-4">
-        Features
-      </h1>
-      <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">
+    <div class="text-center">
+      <SectionTitle>
+        Why Vexilla?
+      </SectionTitle>
+      <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-left">
         Besides just the things that feaure flags themselves offer, Vexilla
-        allows you to do more with less.
+        allows you to do more with less. Here is what separates us from other feature flag tools.
       </p>
-      <div class="flex mt-6 justify-center">
-        <div class="w-16 h-1 rounded-full bg-primary-500 inline-flex"></div>
-      </div>
+      <SectionHr />
     </div>
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4 md:space-y-0 space-y-6">
+    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4 md:space-y-0 lg:mb-6">
       {features.map((feature) => (
         <div
           class="p-4 md:w-1/3 flex flex-col text-center items-center"
