--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { HomeHero } from "../components/home/hero";
-import { HomeFeatureFlags } from "../components/home/what-are-feature-flags";
+import HomeFeatureFlags from "../components/home/what-are-feature-flags.astro";
 import HomeHowItWorks from "../components/home/how-it-works.astro";
 import HomeFeatures from "../components/home/features.astro";
 import { HomeDocumentation } from "../components/home/documentation";
@@ -11,8 +11,8 @@ import { HomeDocumentation } from "../components/home/documentation";
   <main id="main" class="z-1">
     <HomeHero />
     <HomeFeatureFlags />
-    <HomeHowItWorks />
     <HomeFeatures />
+    <HomeHowItWorks />
     <HomeDocumentation />
   </main>
 </Layout>
