--- a/apps/docs/src/components/home/features.astro
+++ b/apps/docs/src/components/home/features.astro
@@ -11,12 +11,24 @@ interface FeatureContent {
 }
 const features: FeatureContent[] = [
 
-{
+  {
     title: "Statically Hosted",
     description: `The feature flag configuration is statically hosted which saves you money, effort, and time. Minimum effort scalability.`,
     // image: "phosphor/duotone/computer-tower-duotone",
     // image: "phosphor/duotone/file-cloud-duotone",
     image: "phosphor/duotone/cloud-duotone",
+  },
+
+  {
+    title: "Git Native",
+    description: `Your flags and config live in a git repository you control. This allows for auditability without the need for a server. GitOps by default.`,
+    image: "phosphor/duotone/git-pull-request-duotone",
+  },
+
+  {
+    title: "First-party SDKs",
+    description: `Vexilla boasts the largest number of first-party SDKs for the languages you use on the frontend and backend. Less custom integrations.`,
+    image: "phosphor/duotone/package-duotone",
   },
 
   {
@@ -47,19 +59,30 @@ const features: FeatureContent[] = [
       </p>
       <SectionHr />
     </div>
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4 md:space-y-0 lg:mb-6">
-      {features.map((feature) => (
+    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4 md:space-y-0 lg:mb-6 gap-8">
+      {features.map((feature, index) => (
         <div
-          class="p-4 md:w-1/3 flex flex-col text-center items-center"
+          class:list={[
+            `p-4 flex text-center items-center w-full justify-center lg:px-40 gap-12`,
+            { "flex-row-reverse": index % 2 === 1 }
+          ]}
         >
-          <div class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-slate-100 text-primary-500 mb-5 flex-shrink-0 p-2">
-            <Icon name={feature.image} class="w-full" />
+          <div class:list={[
+            "md:w-1/2 flex",
+            { "justify-start": index % 2 === 1, "justify-end": index % 2 === 0}
+          ]}>
+            <div class="w-40 h-40 inline-flex items-center justify-center rounded-full bg-slate-100 text-primary-500 flex-shrink-0 p-6">
+              <Icon name={feature.image} class="w-full" />
+            </div>
           </div>
-          <div class="flex-grow">
-            <h2 class="text-emphasis text-lg title-font font-medium mb-3">
+          <div class:list={[
+            "md:w-1/2",
+            { "text-left": index % 2 === 0, "text-right": index % 2 === 1}
+          ]}>
+            <h2 class="text-emphasis text-2xl title-font mb-3 font-medium">
               {feature.title}
             </h2>
-            <p class="leading-relaxed text-base text-left">
+            <p class="leading-relaxed text-base">
               {feature.description}
             </p>
           </div>
