fix: fine tune hero and some a11y

--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -136,6 +136,7 @@ guidePages.sort((a, b) => {
 
           <a class="flex items-center" href="/">
             <img
+              alt="Vexilla logo"
               class="h-[36px] w-[36px] mr-2"
               src="/img/vexilla-logo.png"
             />
