--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { HomeHero } from "../components/home/hero";
+import HomeHero from "../components/home/hero.astro";
 import HomeFeatureFlags from "../components/home/what-are-feature-flags.astro";
 import HomeHowItWorks from "../components/home/how-it-works.astro";
 import HomeFeatures from "../components/home/features.astro";
