fix: improve home documentation section and some small fixes

--- a/apps/docs/src/components/home/features.astro
+++ b/apps/docs/src/components/home/features.astro
@@ -1,15 +1,8 @@
 ---
-import { Icon } from "astro-icon";
+import SectionList from "./common/section-list.astro";
+import type { ListItem } from "@/types/content";
 
-import SectionHr from "./common/section-hr.astro";
-import SectionTitle from "./common/section-title.astro";
-
-interface FeatureContent {
-  title: string;
-  description: string;
-  image: string;
-}
-const features: FeatureContent[] = [
+const features: ListItem[] = [
 
   {
     title: "Statically Hosted",
@@ -47,47 +40,8 @@ const features: FeatureContent[] = [
 
 ---
 
-<section class="text-normal body-font" id="features">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="text-center">
-      <SectionTitle>
-        Why Vexilla?
-      </SectionTitle>
-      <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-left">
-        Besides just the things that feaure flags themselves offer, Vexilla
-        allows you to do more with less. Here is what separates us from other feature flag tools.
-      </p>
-      <SectionHr />
-    </div>
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4 md:space-y-0 lg:mb-6 gap-8">
-      {features.map((feature, index) => (
-        <div
-          class:list={[
-            `p-4 flex text-center  items-start md:items-center w-full justify-center lg:px-40 gap-2 md:gap-12`,
-            { "md:flex-row-reverse": index % 2 === 1 }
-          ]}
-        >
-          <div class:list={[
-            "md:w-1/2 flex",
-            { "md:justify-start": index % 2 === 1, "md:justify-end": index % 2 === 0}
-          ]}>
-            <div class="h-12 w-12 md:w-40 md:h-40 inline-flex items-center justify-center rounded-full bg-slate-100 text-primary-500 flex-shrink-0 p-2 md:p-6">
-              <Icon name={feature.image} class="w-full" />
-            </div>
-          </div>
-          <div class:list={[
-            "md:w-1/2 text-left",
-            { "md:text-left": index % 2 === 0, "md:text-right": index % 2 === 1}
-          ]}>
-            <h2 class="text-emphasis text-2xl title-font mb-3 font-medium mt-2 md:mt-0">
-              {feature.title}
-            </h2>
-            <p class="leading-relaxed text-base">
-              {feature.description}
-            </p>
-          </div>
-        </div>
-      ))}
-    </div>
-  </div>
-</section>
+<SectionList
+  listItems={features}
+  title="Why Vexilla?"
+  description="Besides just the things that feaure flags themselves offer, Vexilla allows you to do more with less. Here is what separates us from other feature flag tools."
+/>
