--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -285,7 +285,7 @@ guidePages.sort((a, b) => {
           </div>
           <div class="w-1/2 md:w-1/4 pb-4">
             <div>
-              <a class="font-bold" href="/documentation">
+              <a class="font-bold" href="/guides">
                 Guides
               </a>
             </div>
