--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -4,7 +4,9 @@ import HomeHero from "../components/home/hero.astro";
 import HomeFeatureFlags from "../components/home/what-are-feature-flags.astro";
 import HomeHowItWorks from "../components/home/how-it-works.astro";
 import HomeFeatures from "../components/home/features.astro";
-import { HomeDocumentation } from "../components/home/documentation";
+import HomeDocumentation from "../components/home/documentation.astro";
+import HomeHelp from "../components/home/help.astro";
+// import HomeServices from "../components/home/services.astro";
 ---
 
 <Layout title="Vexilla">
@@ -14,5 +16,7 @@ import { HomeDocumentation } from "../components/home/documentation";
     <HomeFeatures />
     <HomeHowItWorks />
     <HomeDocumentation />
+    <HomeHelp />
+    <!-- <HomeServices /> -->
   </main>
 </Layout>
