fix: add alt tag to logo

--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -212,6 +212,7 @@ guidePages.sort((a, b) => {
         <div class="flex flex-row items-center gap-8">
           <a class="flex items-center" href="/">
             <img
+              alt="Vexilla logo"
               class="h-[36px] w-[36px] mr-2"
               src="/img/vexilla-logo.png"
             />
