fix: remove side scrollbar on windows

--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -93,7 +93,7 @@ guidePages.sort((a, b) => {
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="w-screen">
+<html lang="en" class="w-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -152,7 +152,7 @@ guidePages.sort((a, b) => {
 
 
   </head>
-  <body class="flex flex-col min-h-screen w-screen relative">
+  <body class="flex flex-col min-h-screen w-full relative">
 
     <div class="z-20 absolute left-[-100%] focus-within:left-0 bg-white"><a href="#main">Skip to content</a></div>
 
