--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -8,16 +8,13 @@ import { ThemeSelector } from "@/components/ThemeSelector";
 import { Search } from "@/components/Search";
 import { DISCORD_INVITE_LINK } from "@/utils/constants";
 
-import '@fontsource/fira-code';
-import '@fontsource/atkinson-hyperlegible/400.css';
-import '@fontsource/atkinson-hyperlegible/700.css';
+import "@fontsource/fira-code";
+import "@fontsource/atkinson-hyperlegible/400.css";
+import "@fontsource/atkinson-hyperlegible/700.css";
 import "@/styles/globals.css";
 
 import { Icon } from "astro-icon";
 
-// import { Icon } from '@iconify/react';
-// import hamburgerMenuOutline from '@iconify/icons-solar/hamburger-menu-outline';
-// import closeSquareOutline from '@iconify/icons-solar/close-square-outline';
 import type { Heading } from "@/types/docs";
 
 interface Props {
@@ -32,12 +29,12 @@ const { title, image, description, url } = Astro.props;
 const isBlog = Astro.url.pathname.startsWith("/blog");
 const isDocumentation = Astro.url.pathname.startsWith("/documentation");
 const isGuide = Astro.url.pathname.startsWith("/guides");
-
+const isServices = Astro.url.pathname.startsWith("/services");
 
 const rawDocumentationPages = await getCollection("documentation");
 
 const globbedDocumentationPages = await Astro.glob(
-  "../content/documentation/*.mdoc"
+  "../content/documentation/*.mdoc",
 );
 
 const documentationPages = await Promise.all(
@@ -50,12 +47,12 @@ const documentationPages = await Promise.all(
 
     if (typeof globbedPage?.getHeadings === "function") {
       newPage.headings = ((await globbedPage?.getHeadings()).filter(
-        (heading: Heading) => heading.depth === 2
+        (heading: Heading) => heading.depth === 2,
       ) || []) as Heading[];
     }
 
     return newPage;
-  })
+  }),
 );
 
 documentationPages.sort((a, b) => {
@@ -64,9 +61,7 @@ documentationPages.sort((a, b) => {
 
 const rawGuidePages = await getCollection("guides");
 
-const globbedGuidePages = await Astro.glob(
-  "../content/guides/*.mdoc"
-);
+const globbedGuidePages = await Astro.glob("../content/guides/*.mdoc");
 
 const guidePages = await Promise.all(
   rawGuidePages.map(async (page, index) => {
@@ -78,21 +73,20 @@ const guidePages = await Promise.all(
 
     if (typeof globbedPage?.getHeadings === "function") {
       newPage.headings = ((await globbedPage?.getHeadings()).filter(
-        (heading: Heading) => heading.depth === 2
+        (heading: Heading) => heading.depth === 2,
       ) || []) as Heading[];
     }
 
     return newPage;
-  })
+  }),
 );
 
 guidePages.sort((a, b) => {
   return (a.data.sortOrder || 0) - (b.data.sortOrder || 0);
 });
-
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="w-full">
   <head>
     <meta charset="UTF-8" />
@@ -124,43 +118,75 @@ guidePages.sort((a, b) => {
         --primary: #257ddd;
       }
     </style>
-    <script defer data-domain="vexilla.dev" src="https://plausible.io/js/script.js"></script>
+    <script
+      defer
+      data-domain="vexilla.dev"
+      src="https://plausible.io/js/script.js"></script>
 
     <!-- HTML Meta Tags -->
     <title>{title || "Vexilla: Feature Flags for Everyone"}</title>
-    <meta name="description" content={description || "Static file-based, git-native, feature flags with an SDK for your language of choice."}>
+    <meta
+      name="description"
+      content={description ||
+        "Static file-based, git-native, feature flags with an SDK for your language of choice."}
+    />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content={url || "https://vexilla.dev"}>
-    <meta property="og:type" content="website">
-    <meta property="og:title" content={title || "Vexilla: Feature Flags for Everyone"}>
-    <meta property="og:description" content={description || "Static file-based, git-native, feature flags with an SDK for your language of choice."}>
-    <meta property="og:image" content={image || "https://vexilla.dev/img/traffic-light-green-opt-2.jpg"}>
+    <meta property="og:url" content={url || "https://vexilla.dev"} />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content={title || "Vexilla: Feature Flags for Everyone"}
+    />
+    <meta
+      property="og:description"
+      content={description ||
+        "Static file-based, git-native, feature flags with an SDK for your language of choice."}
+    />
+    <meta
+      property="og:image"
+      content={image || "https://vexilla.dev/img/traffic-light-green-opt-2.jpg"}
+    />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="vexilla.dev">
-    <meta property="twitter:url" content={url || "https://vexilla.dev"}>
-    <meta name="twitter:title" content={title || "Vexilla: Feature Flags for Everyone"}>
-    <meta name="twitter:description" content={description || "Static file-based, git-native, feature flags with an SDK for your language of choice."}>
-    <meta name="twitter:image" content={image || "https://vexilla.dev/img/traffic-light-green-opt-2.jpg"}>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="vexilla.dev" />
+    <meta property="twitter:url" content={url || "https://vexilla.dev"} />
+    <meta
+      name="twitter:title"
+      content={title || "Vexilla: Feature Flags for Everyone"}
+    />
+    <meta
+      name="twitter:description"
+      content={description ||
+        "Static file-based, git-native, feature flags with an SDK for your language of choice."}
+    />
+    <meta
+      name="twitter:image"
+      content={image || "https://vexilla.dev/img/traffic-light-green-opt-2.jpg"}
+    />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-
-
-
-
-
   </head>
   <body class="flex flex-col min-h-screen w-full relative">
+    <div class="z-20 absolute left-[-100%] focus-within:left-0 bg-white">
+      <a href="#main">Skip to content</a>
+    </div>
 
-    <div class="z-20 absolute left-[-100%] focus-within:left-0 bg-white"><a href="#main">Skip to content</a></div>
-
-    <input aria-owns="mobile-menu" type="checkbox" id="mobile-menu-toggle" class="sr-only md:hidden" />
-    <div id="mobile-menu" class="mobile-menu w-screen h-screen fixed right-full bg-white dark:bg-black z-20 flex flex-col justify-between md:hidden">
+    <input
+      aria-owns="mobile-menu"
+      type="checkbox"
+      id="mobile-menu-toggle"
+      class="sr-only md:hidden"
+    />
+    <div
+      id="mobile-menu"
+      class="mobile-menu w-screen h-screen fixed right-full bg-white dark:bg-black z-20 flex flex-col justify-between md:hidden"
+    >
       <ResponsiveContainer class="flex flex-col items-center relative">
-        <div class="fixed top-0 flex justify-between items-center px-6 py-2 w-full mb-8 bg-white dark:bg-black z-10">
-
+        <div
+          class="fixed top-0 flex justify-between items-center px-6 py-2 w-full mb-8 bg-white dark:bg-black z-10"
+        >
           <a class="flex items-center" href="/">
             <img
               alt="Vexilla logo"
@@ -171,16 +197,14 @@ guidePages.sort((a, b) => {
           </a>
 
           <label for="mobile-menu-toggle">
-            <Icon
-              width={32}
-              name="phosphor/duotone/x-circle-duotone"
-            />
+            <Icon width={32} name="phosphor/duotone/x-circle-duotone" />
           </label>
         </div>
       </ResponsiveContainer>
 
-
-      <ResponsiveContainer class="px-6 py-2 text-center text-xl pt-20 h-screen overflow-scroll">
+      <ResponsiveContainer
+        class="px-6 py-2 text-center text-xl pt-20 h-screen overflow-scroll"
+      >
         <Search client:only="react" />
         <ul class="flex flex-col py-8 gap-8">
           <li>
@@ -203,35 +227,32 @@ guidePages.sort((a, b) => {
               Blog
             </a>
           </li>
-
-
           <li>
             <a
-              href="https://app.vexilla.com"
+              href="/services"
+              class={clsx({
+                "font-bold": isServices,
+              })}
             >
-              App
+              Services
             </a>
           </li>
 
           <li>
-            <a
-              href="discord"
-            >
-              Discord
-            </a>
+            <a href="https://app.vexilla.com"> App </a>
           </li>
 
           <li>
-            <a
-              href="https://github.com/vexilla/vexilla"
-            >
-              GitHub
-            </a>
+            <a href="discord"> Discord </a>
+          </li>
+
+          <li>
+            <a href="https://github.com/vexilla/vexilla"> GitHub </a>
           </li>
         </ul>
       </ResponsiveContainer>
       <ResponsiveContainer class="flex flex-col items-center p-4">
-          <ThemeSelector client:only="react" />
+        <ThemeSelector client:only="react" />
       </ResponsiveContainer>
     </div>
     <header class="fixed w-full top-0 bg-white dark:bg-black z-10">
@@ -271,6 +292,15 @@ guidePages.sort((a, b) => {
             >
               Blog
             </a>
+
+            <a
+              href="/services"
+              class={clsx({
+                "font-bold": isServices,
+              })}
+            >
+              Services
+            </a>
           </nav>
         </div>
         <div class="hidden md:flex items-center gap-8">
@@ -278,13 +308,8 @@ guidePages.sort((a, b) => {
           <ThemeSelector client:only="react" />
         </div>
         <div class="md:hidden">
-          <label
-            for="mobile-menu-toggle"
-          >
-            <Icon
-              width={32}
-              name="phosphor/bold/list-bold"
-            />
+          <label for="mobile-menu-toggle">
+            <Icon width={32} name="phosphor/bold/list-bold" />
           </label>
         </div>
       </ResponsiveContainer>
@@ -296,40 +321,45 @@ guidePages.sort((a, b) => {
 
     <footer class="mt-auto bg-primary-50 dark:bg-primary-900">
       <ResponsiveContainer>
-        <div class="flex flex-row items-start pt-8 justify-center flex-wrap px-4">
+        <div
+          class="flex flex-row items-start pt-8 justify-center flex-wrap px-4"
+        >
           <div class="w-1/2 md:w-1/4 pb-4">
             <div>
-              <a class="font-bold" href="/documentation">
-                Documentation
-              </a>
+              <a class="font-bold" href="/documentation"> Documentation </a>
             </div>
             <ul class="pl-4">
-              {documentationPages.map((page) =>
-                <li class="py-1">
-                  <a href={`/documentation/${page.slug}`}>{page.data.title}</a>
-                </li>
-              )}
+              {
+                documentationPages.map((page) => (
+                  <li class="py-1">
+                    <a href={`/documentation/${page.slug}`}>
+                      {page.data.title}
+                    </a>
+                  </li>
+                ))
+              }
             </ul>
           </div>
           <div class="w-1/2 md:w-1/4 pb-4">
             <div>
-              <a class="font-bold" href="/guides">
-                Guides
-              </a>
+              <a class="font-bold" href="/guides"> Guides </a>
             </div>
             <ul class="pl-4">
-              {guidePages.map((page) =>
-                <li class="py-1">
-                  <a href={`/guides/${page.slug}`}>{page.data.title}</a>
-                </li>
-              )}
+              {
+                guidePages.map((page) => (
+                  <li class="py-1">
+                    <a href={`/guides/${page.slug}`}>{page.data.title}</a>
+                  </li>
+                ))
+              }
             </ul>
           </div>
           <div class="w-1/2 md:w-1/4 pb-4">
-            <div class="font-bold">
-              Business
-            </div>
+            <div class="font-bold">Business</div>
             <ul class="pl-4">
+              <li class="py-1">
+                <a href="/services">Services</a>
+              </li>
               <li class="py-1">
                 <a href="/blog">Blog</a>
               </li>
@@ -340,22 +370,17 @@ guidePages.sort((a, b) => {
           </div>
 
           <div class="w-1/2 md:w-1/4 pb-4">
-            <div class="font-bold">
-              Social
-            </div>
+            <div class="font-bold">Social</div>
             <ul class="pl-4">
               <li class="py-1">
                 <a href="https://github.com/Vexilla">GitHub</a>
               </li>
               <li class="py-1">
-                <a href={DISCORD_INVITE_LINK} target="_blank">
-                  Discord
-                </a>
+                <a href={DISCORD_INVITE_LINK} target="_blank"> Discord </a>
               </li>
             </ul>
           </div>
         </div>
-
 
         <div class="flex items-center justify-center p-16">
           &copy; 2023 Vexilla
